# apictx

./: AGENTS.md  README.md  pyproject.toml
docs/: USAGE.md  adr-0001-python-3.13.md  adr-0002-priorities.md
src/apictx/: __init__.py  cli.py  errors.py  extract.py  models.py  pipeline.py  result.py  schema.json  schema.py
tests/: test_alias_linking.py  test_all_visibility.py  test_all_visibility_ann.py  test_cli.py  test_determinism.py  test_docstrings_and_query.py  test_extract.py  test_features.py  test_index_and_link.py  test_link_property.py  test_pipeline.py  test_query.py  test_visibility_and_constants.py
