[project]
name = "apictx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@openai.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "libcst>=1.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.138.13",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "types-jsonschema>=4.25.1.20250822",
]
